--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,60 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
+@layer base {
   :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    /* Backgroundd */
+    --background-1: #f9fcfe;
+    --background-2: #ebf3fc;
+    --background-3: #f4f4fb;
+    --background-hover-1: #dddbdb1a;
+    --background-hover-2: #9493931a;
+    --background-danger: #f87171;
+    --background-overlay: #706e6e1e;
+
+    /* Contrast colors */
+    --background-contrast: #1b1a1a;
+    --background-contrast-hover: #2b2929;
+    --text-contrast: #fffafa;
+
+    /* Texts */
+    --text-1: #1f1c1c;
+    --text-2: #575757dd;
+    --text-hover: #2b2828;
+    --text-danger: #ef4444;
+
+    /* Extra */
+    --border-1: #e5e5e5;
+    --border-2: #e5e5e5;
+    --special: #3b82f6;
+    --radius: 0.5rem;
   }
-}
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
+  .dark {
+    /* Backgroundd */
+    --background-1: #191919;
+    --background-2: #131212;
+    --background-3: #313030;
+    --background-hover-1: #6e6e6e07;
+    --background-hover-2: #9493931a;
+    --background-danger: #dc2626;
+    --background-overlay: #706e6e1e;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+    /* Contrast colors */
+    --background-contrast: #f7f5f2;
+    --background-contrast-hover: #e2e2e2;
+    --text-contrast: #1f1c1c;
+
+    /* Texts */
+    --text-1: #fffafa;
+    --text-2: #ffffff93;
+    --text-hover: #ffffff;
+    --text-danger: #ef4444;
+
+    /* Extra */
+    --border-1: #353434;
+    --border-2: #e5e5e5;
+    --special: #3b82f6;
+    --radius: 0.5rem;
   }
 }
