Update special color

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@
     /* Extra */
     --border-1: #e5e5e5;
     --border-2: #e5e5e5;
-    --special: #2563eb;
+    --special: #6366f1;
     --special-hover: #474e6e1c;
     --radius: 0.5rem;
   }
@@ -56,7 +56,7 @@
     /* Extra */
     --border-1: #353434;
     --border-2: #323235;
-    --special: #2563eb;
+    --special: #6366f1;
     --special-hover: #363946a8;
     --radius: 0.5rem;
   }
